# clustereval

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
clustereval/: __init__.py  clustereval.py  core.py
docs/: Makefile  conf.py  index.md  index.rst  requirements.txt
examples/: 01_basic.ipynb  01_homogeneity_parsimony.ipynb  02_feature_selection.ipynb  02_other_trade_offs.ipynb  03_algorithm_comparison.ipynb  03_feature_selection.ipynb  04_algorithm_comparison.ipynb  basic.ipynb  clustereval.mplstyle
tests/: test_scores.py
