[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["clustereval"]

[project]
name = "ClusterEval"
version = "0.2"
description = "External clustering evaluation"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["Clustering", "Homogeneity", "Parsimony"]

authors = [{ name = "Andreas Tiffeau-Mayer", email = "qimmuno@gmail.com" }]
maintainers = [{ name = "Andreas Tiffeau-Mayer", email = "qimmuno@gmail.com" }]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = ["numpy", "scikit-learn"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/qimmuno/clustereval"
"Bug Reports" = "https://github.com/qimmuno/clustereval/issues"
